objects/disco__Question_Value__c.object
<CustomObject>
    <description>A defined answer option for a specific Question, for example, a picklist value</description>
    <fields>
        <fullName>disco__Discovery_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discovery Type</label>
        <referenceTo>disco__Discovery_Type__c</referenceTo>
        <relationshipLabel>Question Values</relationshipLabel>
        <relationshipName>Question_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Icon__c</fullName>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Label__c</fullName>
        <description>actual question value</description>
        <label>Label</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Parent_Value__c</fullName>
        <description>For dependent picklists: If Parent Value is set, only show this Question Value when the parent question has this value</description>
        <label>Parent Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Question__c</fullName>
        <label>Question</label>
        <referenceTo>disco__Question__c</referenceTo>
        <relationshipLabel>Question Values</relationshipLabel>
        <relationshipName>Question_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Question Value</label>
    <nameField>
        <displayFormat>QV-{0000000}</displayFormat>
        <label>Question Value Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>